Closed Bug 970736 Opened 11 years ago Closed 11 years ago

Basic compositor uses wrong ExtendMode when drawing textures

Categories

(Core :: Graphics: Layers, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: billm, Assigned: billm)

Details

Attachments

(1 file)

Attached patch extend-mode-fixSplinter Review
No description provided.
Attachment #8373792 - Flags: review?(matt.woodrow)
Attachment #8373792 - Flags: review?(matt.woodrow) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: