Bug 970736 - Make basic compositor handle texture wrapping correctly (r=mattwoodrow)